# sf-track

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
cf-worker/: .dev.vars.example  README.md  package-lock.json  package.json  wrangler.toml
cf-worker/scripts/: generate-vapid.mjs
cf-worker/src/: index.ts  push-poll.test.ts
deploy/: sf-track.service
frontend/: index.html  package-lock.json  package.json
frontend/public/: push-sw.js
frontend/src/: main.tsx  styles.css
src/: auth.rs  config.rs  main.rs  rate_limit.rs  sanitize.rs  security.rs  sf.rs
